proxy config added

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "piciosa",
+  "name": "psycontrol",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@kolkov/angular-editor": "^1.1.0",
     "core-js": "^3.6.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
