--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Piciosa": {
+    "psycontrol": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Piciosa",
+            "outputPath": "dist/psycontrol",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -63,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Piciosa:build"
+            "browserTarget": "psycontrol:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Piciosa:build:production"
+              "browserTarget": "psycontrol:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Piciosa:build"
+            "browserTarget": "psycontrol:build"
           }
         },
         "test": {
@@ -112,18 +112,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Piciosa:serve"
+            "devServerTarget": "psycontrol:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Piciosa:serve:production"
+              "devServerTarget": "psycontrol:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "Piciosa",
+  "defaultProject": "psycontrol",
   "cli": {
     "analytics": "f20628a2-befb-413f-8060-5611891aea71"
   }
