--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "@auth0/angular-jwt": "^5.0.1",
     "@kolkov/angular-editor": "^1.1.0",
     "@swimlane/ngx-charts": "^13.0.2",
     "core-js": "^3.6.4",
